# ScreenshotDiff

./: CMakeLists.txt  README.md  build-cmake.sh  diff_application.cpp  diff_application.h  diff_screenshot.cpp  diff_screenshot.h  full_screen.cpp  full_screen.h  main.cpp  screenshot_widget.cpp  screenshot_widget.h
